--- a/index.html
+++ b/index.html
@@ -125,18 +125,14 @@
 	</div>
 	<div id="totals" class="o-grid o-grid--no-gutter center-grid">
 		<div class="o-grid__cell block">
-			<span>{{tgs.attacker.tg}}</span>
 			<span>{{costs.attacker.cost}} res</span>
 			<span class="count">{{costs.attacker.count}}</span>
 			
 		</div>
-		<span>{{tgs.attacker.tgHacan}}</span>
 		<div class="unit-name"><span>Totals</span></div>
-		<span>{{tgs.defender.tgHacan}}</span>
 		<div class="o-grid__cell block">
 			<span class="count">{{costs.defender.count}}</span>
 			<span>{{costs.defender.cost}} res</span>
-			<span>{{tgs.defender.tg}}</span>
 		</div>
 	</div>
 	<div class="o-grid o-grid--no-gutter center-grid">
@@ -145,7 +141,7 @@
 					@click="clear('attacker')">Clear Attacker
 			</button>
 		</div>
-		<div class="unit-name"></div>
+		<div class="unit-name"><span>{{tgs.attacker.tgsEarned}} {{tgs.attacker.tgsSpent}} {{tgs.defender.tgsSpent}} {{tgs.defender.tgsEarned}}</span></div>
 		<div class="o-grid__cell block">
 			<button type="button" class="c-button c-button--ghost-brand u-small"
 					@click="clear('defender')">Clear Defender
@@ -189,15 +185,13 @@
 					<option-pair v-for="pair in raceTechnologies" :pair="pair" :options="options"></option-pair>
 					
 		<div class="heading"><strong>Action Cards</strong></div>
-		<option-pair v-for="(option, key) in ActionCards"
-						:option-name="key" :option="option" :options="options" :visible="(key !== 'directHit2A' && key !== 'directHit3A' && key !== 'directHit4A' && key !== 'directHit2D' && key !== 'directHit3D' && key !== 'directHit4D' && key !== 'maneuveringJets2A' && key !== 'maneuveringJets3A' && key !== 'maneuveringJets4A' && key !== 'maneuveringJets2D' && key !== 'maneuveringJets3D' && key !== 'maneuveringJets4D') 
-						|| (key === 'directHit2A' && options.attacker.directHit) || (key === 'directHit3A' && options.attacker.directHit2A) || (key === 'directHit4A' && options.attacker.directHit3A)
-						|| (key === 'directHit2D' && options.defender.directHit) || (key === 'directHit3D' && options.defender.directHit2D) || (key === 'directHit4D' && options.defender.directHit3D)
-						|| (key === 'maneuveringJets2A' && options.attacker.maneuveringJets) || (key === 'maneuveringJets3A' && options.attacker.maneuveringJets2A) || (key === 'maneuveringJets4A' && options.attacker.maneuveringJets3A)
-						|| (key === 'maneuveringJets2D' && options.defender.maneuveringJets) || (key === 'maneuveringJets3D' && options.defender.maneuveringJets2D) || (key === 'maneuveringJets4D' && options.defender.maneuveringJets3D)"></option-pair>
+		<option-pair v-for="action in actionCards"
+						:option-name="action.key" :option="action.option" :pair="action.pair" :options="options" :visible="(action.key !== 'directHit2A' && action.key !== 'directHit3A' && action.key !== 'directHit4A' && action.key !== 'directHit2D' && action.key !== 'directHit3D' && action.key !== 'directHit4D' ) 
+						|| (action.key === 'directHit2A' && options.attacker.directHit) || (action.key === 'directHit3A' && options.attacker.directHit2A) || (action.key === 'directHit4A' && options.attacker.directHit3A)
+						|| (action.key === 'directHit2D' && options.defender.directHit) || (action.key === 'directHit3D' && options.defender.directHit2D) || (action.key === 'directHit4D' && options.defender.directHit3D)"></option-pair>
 		<div class="heading"><strong>Leaders</strong></div>
-		<option-pair v-for="(option, key) in Leaders"
-						:option-name="key" :option="option" :options="options" :visible="(key !== 'argentCommanderFirstRound') || (key === 'argentCommanderFirstRound' && options.attacker.race === 'L1Z1X' && options.attacker.argentCommander)"></option-pair>
+		<option-pair v-for="leader in leaders"
+						:option-name="leader.key" :option="leader.option" :pair="leader.pair" :options="options" :visible="(leader.key !== 'argentCommanderFirstRound') || (leader.key === 'argentCommanderFirstRound' && options.attacker.race === 'L1Z1X' && options.attacker.argentCommander)"></option-pair>
 		<option-pair v-for="pair in heroes" :pair="pair" :options="options"></option-pair>
 		<div class="heading"><strong>Agendas / Promissory / Racial / Miscellaneous</strong></div>
 		<option-pair v-for="(option, key) in Agendas"
@@ -207,8 +201,8 @@
 					 || (key === 'hasMemoriaIIA' && options.attacker.nomadCavalry) || (key === 'hasMemoriaIID' && options.defender.nomadCavalry)
 					 || ((key === 'argentStrikeWingBombardmentA' || key === 'argentStrikeWingSpaceCannonA' || key === 'argentStrikeWingBarrageA')   && options.attacker.argentStrikeWing)
 					 || (( key === 'argentStrikeWingSpaceCannonD' || key === 'argentStrikeWingBarrageD')   && options.defender.argentStrikeWing)"></option-pair>
-		<option-pair v-for="(option, key) in Miscellaneous"
-					 :option-name="key" :option="option" :options="options"></option-pair>
+		<option-pair v-for="mis in miscellaneous"
+					:option-name="mis.key" :option="mis.option" :pair="mis.pair" :options="options" :visible="true"></option-pair>
 		<option-pair v-for="pair in raceOptions" :pair="pair" :options="options"></option-pair>
 		<p id="chart-size-selector" class="o-grid center-grid"><span>Chart size:&nbsp;</span>
 			<select class="o-grid__cell c-field block" v-model="canvasSize">
