--- a/index.html
+++ b/index.html
@@ -221,64 +221,16 @@
 
 	<div id="help" :class="{ collapsed: !showHelp }">
 		<h1>Twilight Imperium IV Edition Battle Calculator</h1>
+		<script>
+			function clearLocalStorage() {
+				localStorage.clear();
+				alert('Local storage has been cleared.');
+				location.reload();
+			}
+		</script>
+		<a href="#" onclick="clearLocalStorage();">Clear Local Storage</a>
 		<p>For more mobile-friendly UI try <a href="mobile/">this</a>.</p>
-		<p>Add and remove units to the battle by using '+' and '-' buttons.</p>
-		<p>Toggle unit upgrades with '&#x25b3' buttons.</p>
-		<p>Select number of units already damaged before the battle from the corresponding drop-downs.</p>
-		<p>Switch battle type between Space Combat and Invasion.</p>
-		<p>Read the chart. Huge red and blue percent figures tell the probabilities of either side winning the
-			battle.</p>
-		<p>Characters below the horizontal axis designate units participating in the battle. Small case letters indicate
-			the use of sustain damage abilities.</p>
-		<table id="letters-legend">
-			<tr>
-				<td class="letter">X</td>
-				<td>Flagship - characteristics depend on selected race</td>
-			</tr>
-			<tr>
-				<td class="letter">W</td>
-				<td>War Sun</td>
-			</tr>
-			<tr>
-				<td class="letter">D</td>
-				<td>Dreadnought</td>
-			</tr>
-			<tr>
-				<td class="letter">C</td>
-				<td>Cruiser</td>
-			</tr>
-			<tr>
-				<td class="letter">V</td>
-				<td>Carrier</td>
-			</tr>
-			<tr>
-				<td class="letter">+</td>
-				<td>Destroyer</td>
-			</tr>
-			<tr>
-				<td class="letter">F</td>
-				<td>Fighter</td>
-			</tr>
-			<tr>
-				<td class="letter">M</td>
-				<td>Mech</td>
-			</tr>
-			<tr>
-				<td class="letter">G</td>
-				<td>Ground Force</td>
-			</tr>
-			<tr>
-				<td class="letter">=</td>
-				<td>Battle ends in a draw</td>
-			</tr>
-		</table>
-		<p>Graph shows probabilities of battle outcomes. '=' represents a draw outcome.
-			Any other point represents an outcome in which units between this point and '=' sign survive.
-			Tooltips show probabilities that at least that many units will survive the battle.</p>
-		<p>Options allow calculator to take into account some Technologies, Action Cards, Agendas, and Promissory Notes.</p>
-		<p>Units are ordered in what I consider reasonable sequence of dying. Though this order could be questionable,
-			e.g sometimes War Suns are more valuable than Flagships. I was lazy to implement manual ordering.</p>
-		<p>Game aspects <strong>not</strong> taken into account by this calculator:</p>
+				<p>Game aspects <strong>not</strong> taken into account by this calculator:</p>
 		<ul>
 			<li><strong>Nekro Virus</strong> gaining unit upgrade technology during a battle thereby changing participating units' battle value,</li>
 			<li><strong>Nekro Virus</strong> obtaining race-specific unit upgrades</li>
@@ -328,23 +280,6 @@
 			</li>
 		</ul>
 		</p>
-		<p>Code and some more info could be found on <a
-				href="https://github.com/alpha-mouse/ti4calc">GitHub</a>.</p>
-		<p>Thanks to:
-		<ul>
-			<li>Ling Weak, Edward Nickson, and L0ft3r​ – for various improvements to the calculator for the third
-				edition of the game. This calculator is heavily based on that one.
-			</li>
-			<li>Joakim Andersson (j.ason a&#8291;t live.se) – invaluable contribution to finding subtle miscalculations in Duranium Armor, Letnev and Jol-Nar flagships handling. Other great suggestions.
-			</li>
-			<li>Alex Grant – <a href="mobile/">mobile-friendly UI version</a>.
-			</li>
-			<li>Dan Johnson – Naalu fleet cost calculation fix.
-			</li>
-		</ul>
-		</p>
-		<p>Any suggestions and bug reports are welcome at ivan.bachtin@gmail.com</p>
-		<p><a href="https://github.com/alpha-mouse/ti4calc/blob/master/CHANGELOG.md">Version {{appInfo.version}}. Released {{appInfo.date}}</a>.</p>
 	</div>
 </div>
 <!----><div id="result-area" :style="{ width: canvasWidth, height: canvasHeight }">
